# sumi-translate

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json
docs/: PRD.md  audit-20260618.md  backlog.md  decisions.md  issues.md  setup-google-api.md  spike-01.md  spike-system-dictionary.md  translation-cost-strategy.md  ui-spec.md
docs/tasks/: Fix batch 1 security.md  Fix batch 2 cleanup.md  audit-task.md  menu-bar-task.md
scripts/: build-dict.py
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  pipeline.rs  router.rs  settings.rs  workbench.rs
src-tauri/src/monitor/: accessibility.rs  double_press.rs  filter.rs  mod.rs  pasteboard.rs
src-tauri/src/providers/: dictionary.rs  llm.rs  mod.rs  mt.rs
src-tauri/src/windows/: glance.rs  mod.rs  workbench.rs
src/components/: SettingsView.css  SettingsView.tsx
src/glance/: GlanceCard.css  GlanceCard.tsx
src/services/: api.ts
src/styles/: tokens.css
src/workbench/: DictionaryCard.css  DictionaryCard.tsx  Workbench.css  Workbench.tsx  caretText.test.ts  caretText.ts
tasks/: blank-cmdcc-workbench-task.md
