[package]
name = "sumi"
version = "0.1.0"
description = "Sumi — macOS 翻譯工具（Spike 01：觸發 + 權限 + 剪貼簿）"
authors = ["KimJ"]
edition = "2021"

[lib]
name = "sumi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = "0.5"
arboard = "3"
log = "0.4"
env_logger = "0.11"
