[package]
name = "sumi"
version = "0.1.0"
description = "Sumi — macOS 翻譯工具"
authors = ["KimJ"]
edition = "2021"

[lib]
name = "sumi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
log = "0.4"
env_logger = "0.11"
core-graphics = "0.25.0"
core-foundation = "0.10.1"
reqwest = { version = "0.13.4", features = ["charset", "http2", "json", "native-tls"], default-features = false }
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", features = ["NSString", "NSArray", "NSURL", "NSGeometry", "NSDictionary"] }
objc2-app-kit = { version = "0.3.2", features = ["NSPanel", "NSWindow", "NSResponder", "NSPasteboard", "NSScreen", "NSGraphics"] }
keyring = { version = "3", features = ["apple-native"] }
